--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "tailwindcss": "^4.0.0",
         "typescript": "^5.0.2",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.22.4"
     }
 }
