--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@types/react-router-dom": "^5.3.3",
+        "react-router-dom": "^7.8.2",
         "sweetalert2": "^11.22.4"
     }
 }
